--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- 
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE
+	FREE HTML5 TEMPLATE surya
 	DESIGNED & DEVELOPED by FREEHTML5.CO
 		
 	Website: 		http://freehtml5.co/
